--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "enumify"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 license = "MIT"
-description = "A Rust macro that declares an `enum` (and a bunch of `impl From`s) based on a set of `struct`s"
+description = "A Rust macro that declares an `enum` (and a bunch of `impl From`s) based on a set of types"
 repository = "https://github.com/valmirjunior0088/enumify"
 
 [lib]
